declarative_imperatives/create_an_ingress_for_one_of_those_networking_problems.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: bar-service
            port:
              number: 9090
        path: /bar
        pathType: Prefix
      - backend:
          service:
            name: foo-service
            port:
              number: 8080
        path: /foo
        pathType: Prefix
status:
  loadBalancer: {}
